# twixt-pp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cg_twixtpp/: bot_handler.py  game.py  main.cpp
cg_twixtpp/include/: Position.hpp
cg_twixtpp/scripts/: visualize.py
cg_twixtpp/src/: Agent.cpp  Agent.hpp  Board.cpp  Board.hpp  BoardEvaluator.cpp  BoardEvaluator.hpp  BoardHasher.cpp  BoardMoveOrganizer.cpp  BoardMoveOrganizer.hpp  Human.hpp  Judge.cpp  Judge.hpp  Move.cpp  Move.hpp  Player.hpp  Position.hpp  main.cpp
src/: Board.hpp  BoardEvaluator.cpp  BoardHasher.hpp  BoardMoveOrganizer.cpp  CMakeLists.txt  Human.hpp  Move.hpp  Position.cpp  Position.hpp  main.cpp
src/agent/: Agent.cpp  Agent.hpp  CMakeLists.txt  Evaluator.cpp  Evaluator.hpp  Hasher.cpp  Hasher.hpp  MoveOrganizer.cpp  MoveOrganizer.hpp
src/board/: Board.cpp  Board.hpp  CMakeLists.txt  Collisions.hpp  Direction.hpp
src/game/: CMakeLists.txt  Game.cpp  Game.hpp  Human.hpp  Judge.cpp  Judge.hpp  Move.hpp  Player.hpp
src/main/: CMakeLists.txt  main.cpp
src/render/: CMakeLists.txt  Painter.cpp  Painter.hpp
